community.json -> contributors.json (expose from index.js)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "community",
     "npm"
   ],
-  "main": "community.json",
+  "main": "index.js",
   "dependencies": {},
   "devDependencies": {},
   "license": "MIT"
