--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "level-community",
-  "description": "Meta data on members of the LevelDB community",
   "version": "3.0.0",
+  "description": "Meta data on members of the LevelDB community",
+  "license": "MIT",
+  "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/level/community.git"
@@ -11,9 +15,5 @@
     "leveldb",
     "community",
     "npm"
-  ],
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
-  "license": "MIT"
+  ]
 }
