--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "Meta data on members of the LevelDB community",
   "license": "MIT",
   "main": "index.js",
+  "scripts": {
+    "test": "standard && hallmark",
+    "hallmark": "hallmark --fix"
+  },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "hallmark": "^0.1.0",
+    "standard": "^12.0.1"
+  },
+  "hallmark": {
+    "community": "."
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Level/community.git"
